--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="./style.css">
 
 <ul class="list">
     <li>Apples<button hidden disabled aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
