--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
     <li>Bananas<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
 </ul>
 
-<script src="/javascript.js"></script>
+<script src="./javascript.js"></script>
