--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <link rel="stylesheet" href="./style.css">
 
 <ul class="list">
-    <li>Apples<button hidden disabled aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
-    <li>Oranges<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
-    <li>Mangoes<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
-    <li>Bananas<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
+    <li>Vincentius Evan Adibrata<button hidden disabled aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
+    <li>Muhammad Ridwan<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
+    <li>Archie Suyono<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
+    <li>Hedi Eka Kamaludin<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
+    <li>Rizki Azhari<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
+    <li>Aji Noto Kusumo<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
+    <li>Indra Sanjaya<button hidden aria-label="Move to Top"><i class="fa-solid fa-arrow-up"></i></button></li>
 </ul>
 
-<<<<<<< HEAD
 <script src="./javascript.js"></script>
-=======
-<script src="./javascript.js"></script>
->>>>>>> 18a5e90 (INTERACTIVE TRANSITION)
